[tool.poetry]
name = "serve_valheim"
version = "0.1.0"
description = ""
authors = ["Maximilian Burszley <mburszley@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.0"
rich = "^9.11.0"
typer = "^0.3.2"
pydantic = {extras = ["dotenv"], version = "^1.7.3"}

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
rope = "^0.18.0"
yapf = "^0.30.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
